# Graditude

./: pyproject.toml
gratitude_journal/: .env  alembic.ini  docker-compose.yaml  main.py
gratitude_journal/alembic/versions/: afa4cb6c5b9c_create_account_table.py
gratitude_journal/core/: config.py
gratitude_journal/models/: database.py  user.py
